--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -3,7 +3,9 @@
     package="co.mrmanhattan.manhattanreceiver"
     android:versionCode="1"
     android:versionName="1.0" >
-
+	
+	<uses-permission android:name="android.permission.BLUETOOTH" />
+	
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="18" />
