--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -5,9 +5,10 @@
     android:versionName="1.0" >
 	
 	<uses-permission android:name="android.permission.BLUETOOTH" />
+	<uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
 	
     <uses-sdk
-        android:minSdkVersion="8"
+        android:minSdkVersion="15"
         android:targetSdkVersion="18" />
 
     <application
